# kupfer

./: .gitattributes  .gitignore  AUTHORS  NEWS  README  README.rst  TODO  Waf.ChangeLog  bookmarks.py  browser.py  debug.py  epiphany.py  icons.py  kupfer-activate.sh  kupfer-run  kupfer-simple.desktop  kupfer.desktop  kupfer.doap  kupfer.kdev4  kupfer.py  kupfer_dev.py  kupferrelay.py  listen.py  main.py  makedist.sh  mini.py  objects.py  parser.py  pyproject.toml  utils.py  waf  wscript
.github/: ISSUE_TEMPLATE
Documentation/: Contributing.rst  Copyright.rst  GTKTheming.rst  Localization.rst  Makefile  Manpage.rst  Manual.rst  PluginAPI.rst  Quickstart.rst  VersionHistory.rst  coding_style  kupfer_internals  localization  plugins  wscript_build
auxdata/: kupfer-exec.desktop.in  kupfer-mimetypes.xml  kupfer.desktop.in  wscript  wscript_build
contrib/: README  _ssl.py  evilplugin.py  google_translate.py  icon_names.py  nautilusselection.py  runningapplications.py  tracker.py  wikipedia.py
contrib/twitter/: COPYING  __init__.py
data/: credentials_dialog.ui  credentials_dialog_oauth1.ui  defaults.cfg  getdata_dialog.ui  getkey_dialog.ui  kupfer.1  kupfer.1.rst  kupfer.desktop.in  kupfer.desktop.in.in  preferences.ui  progress_dialog.ui  result.ui  style.css  style.css.dark  style.css.light  wscript_build
data/art/: COPYING  icon-list
data/searchplugins/: google.xml
extras/: kupfer_provider.py  wscript
help/: Makefile  Makefile.am  kupfer.omf.in  wscript
help/C/: Makefile  generalusage.page  index.page  introduction.page  keyboard.page  legal.xml  license.page  managing-plugins.page  moreusage.page  plugin-applications.page  plugin-calculator.page  plugin-favorites.page  plugin-gwibber.page  plugin-notes.page  plugin-selected-file.page  plugin-thunar.page  plugin-triggers.page  plugin-websearch.page  plugins.page  tips.page
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/pl/: pl.po
help/ro/: ro.po
help/sl/: sl.po
kupfer/: __init__.py  bookmarks.py  browser.py  commandexec.py  config.py  conspickle.py  data.py  datatools.py  dbuscompat.py  desktop_launch.py  desktop_parse.py  environment.py  execfile.py  helplib.py  icons.py  interface.py  keybindings.py  keyrelay.py  kupfer.py  kupferstring.py  kupferui.py  launch.py  learn.py  listen.py  main.py  objects.py  plugin_support.py  plugins.py  preferences.py  pretty.py  puid.py  qfurl.py  relevance.py  runtimehelper.py  scheduler.py  search.py  session.py  settings.py  task.py  terminal.py  (+6 more)
kupfer/core/: __init__.py  _support.py  actionaccel.py  actioncompat.py  commandexec.py  data.py  datactrl.py  execfile.py  learn.py  panes.py  pluginload.py  plugins.py  qfurl.py  relevance.py  search.py  searcher.py  settings.py  settings_test.py  sources.py
kupfer/extensions/: __init__.py  screen.py  windows.py
kupfer/plugin/: __init__.py  _firefox_support.py  abiword.py  about.py  about_support.py  applications.py  apt_tools.py  archiveinside.py  archivemanager.py  aria2.py  asciiunicodeiconset.py  audacious.py  bookmarks.py  brotab.py  calculator.py  character_icons.py  chromium.py  chromium_support.py  clawsmail.py  clipboard.py  commands.py  common.py  core.py  custom_terminal.py  custom_theme.py  customtheme.py  darkstyle.py  darktheme.py  deepdirectories.py  deepdirectories3.py  defaultmail.py  devhelp.py  dictionary.py  documents.py  duckduckgo.py  duckduckgo_search.py  empathy.py  epiphany.py  epiphany_support.py  evolution.py  (+109 more)
kupfer/plugin/core/: COPYING  __init__.py  alternatives.py  commands.py  contents.py  debug.py  icon-list  internal.py  selection.py  terminals.py  text.py
kupfer/plugin/dbusintrospect/: __init__.py  find.py
kupfer/plugin/gmail/: __init__.py
kupfer/plugin/google_mail/: COPYING  __init__.py
kupfer/plugin/google_picasa/: COPYING  __init__.py  icon-list
kupfer/plugin/id2/: __init__.py  id2data.json
kupfer/plugin/linglish/: __init__.py  (+1 more)
kupfer/support/: __init__.py  conspickle.py  datatools.py  datatools_test.py  desktop_parse.py  desktop_parse_test.py  fileutils.py  itertools.py  itertools_test.py  kupferstring.py  pretty.py  scheduler.py  system.py  task.py  textutils.py  types.py  validators.py  validators_test.py  weaklib.py
kupfer/ui/: _support.py  _widgets.py  about.py  accelerators.py  browser.py  colorpicker.py  credentials_dialog.py  getdata_dialog.py  getkey_dialog.py  interface.py  keybindings.py  kupferhelp.py  listen.py  plugin_conf_dialog.py  preferences.py  progress_dialog.py  search.py  session.py  style.css  style.css.template  support.py  uievents.py  uiutils.py
oldplugins/: README.rst  abiword.py  apt_tools.py  asciiunicodeiconset.py  chromium.py  chromium_support.py  clawsmail.py  customtheme.py  devhelp.py  empathy.py  epiphany.py  epiphany_support.py  evolution.py  filezilla.py  firefox.py  firefox3_support.py  firefox_support.py  gajim.py  google_search.py  gtg.py  gwibber.py  gwibber_simple.py  locate.py  multihead.py  openoffice.py  opera.py  operamail.py  pidgin.py  putty.py  rhythmbox.py  rhythmbox_support.py  rst.py  services.py  shorten_links.py  show_qrcode.py  show_text.py  skype.py  tracker1.py  truecrypt.py  tsclient.py  (+3 more)
oldplugins/gmail/: __init__.py  icon-list
oldplugins/google_picasa/: __init__.py
oldplugins/vim/: __init__.py  plugin.py  service.py  vimcom.py
oldplugins/virtualbox/: __init__.py  ose_support.py  vboxapi4_support.py  vboxapi_support.py
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  eu.po  fr.po  gl.po  hu.po  intltool  it.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  wscript  zh_CN.po
waflib/: Build.py  ConfigSet.py  Configure.py  Context.py  Logs.py  Node.py  Options.py  Runner.py  Scripting.py  Task.py  TaskGen.py  Utils.py  ansiterm.py  fixpy2.py
waflib/Tools/: c_aliases.py  c_config.py  c_preproc.py  c_tests.py  ccroot.py  gnu_dirs.py  python.py
waflib/extras/: compat15.py  md5_tstamp.py  package.py  relocation.py
(+19 files in other folders)
