#
# This file defines variables and files for Kupfer's
# mallard documentation.
#
# This file is needed for GNOME's translation infrastructure,
# but it is never used as a real Makefile.
#
# Define all languages for translation in the variable DOC_LINGUAS
#


include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = kupfer
DOC_INCLUDES =
DOC_FIGURES =

DOC_PAGES = \
	index.page \
	introduction.page \
	license.page \
	plugins.page \
	tips.page 


DOC_LINGUAS = de


dist-hook: doc-dist-hook
