#
# This file defines variables and files for Kupfer's
# mallard documentation.
#
# This file is needed for GNOME's translation infrastructure,
# but it is never used as a real Makefile.
#
# Define all languages for translation in the variable HELP_LINGUAS
#


# @YELP_HELP_RULES@

HELP_ID = kupfer

HELP_FILES = \
	generalusage.page \
	index.page \
	introduction.page \
	keyboard.page \
	license.page \
	managing-plugins.page \
	moreusage.page \
	plugin-applications.page \
	plugin-calculator.page \
	plugin-favorites.page \
	plugin-gwibber.page \
	plugin-nautilusselection.page \
	plugin-notes.page \
	plugin-thunar.page \
	plugin-triggers.page \
	plugin-websearch.page


HELP_LINGUAS = cs de el es fr it pl ro sl


# dist-hook: doc-dist-hook
